# simplewishlist_backend

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.production  README.md  flush_db.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_test.sh
.github/workflows/: ci.yml  deploy.yml  django.yml  docker_build_and_push.yml
api/: RedisForWishList.py  api.py  consumers.py  decorators.py  exceptions.py  pydantic_models.py  routing.py  utils.py
api/tests/: factories.py  test_consumers.py  test_pydantic_models.py  test_redis_for_wishlist.py  test_utils_functions.py  test_views.py  utils.py
core/: admin.py  pydantic_models.py
core/fixtures/: wishlist_data.json
core/migrations/: 0001_initial.py  0002_wishlistuser_is_active.py  0003_wish_deleted.py  0004_wish_description.py  0005_alter_wish_price.py  0006_add_default_groups.py  0006_auto_20241217_1601.py  0007_wishlist_is_surprise_mode_enabled.py  0008_remove_admin_functionality.py  0009_add_suggested_by_field.py
core/models/: __init__.py  wish.py  wishlist.py  wishlist_users.py
core/tests/: test_models.py
docker/: entrypoint.sh
simplewishlist/: api.py  asgi.py  authentication.py  settings.py  urls.py  wsgi.py
simplewishlist/settings/: __init__.py  base.py  dev.py  prod.py
simplewishlist/templates/admin/: base.html
