[project]
name = "SimpleWishlist"
version = "0.0.1"

line-length = 120

[tool.coverage.report]
exclude_also = [
    "def __str__",
]

[tool.coverage.run]
omit = [
    "manage.py",
    "simplewishlist/*"
]

[tool.ruff]
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "migrations"
]

[tool.autoflake]
check = true
imports = ["django", "requests", "urllib3"]
